<resources>
  <string name="app_name">Itera - Make a Difference</string>

  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>

  <string name="course_list_activity_title">Kommende arrangementer</string>

  <string name="action_settings">Settings</string>
  <string name="course_activity_title">Arrangementsinformasjon</string>
  <string name="create_course_activity_title">Opprett arrangement</string>

  <string name="course_title_label">Tittel</string>
  <string name="course_description_label">Beskrivelse</string>
  <string name="course_start_date_label">Starter</string>
  <string name="course_end_date_label">Slutter</string>

  <string name="button_create_course">Opprett</string>
  <string name="button_update_course">Lagre</string>
  <string name="button_delete_course">Slett</string>

  <!-- Search drawer -->
  <string name="search_drawer_filter_title">Filtrer arrangementer</string>
  <string name="search_drawer_filter_department">Avdeling</string>
  <string name="search_drawer_filter_type">Type</string>
  <string name="search_drawer_filter_organizer">Arrangør</string>
  <string name="search_drawer_search_hint">Finn arrangement</string>

  <string name="search_type_course_day">Fagdag</string>
  <string name="search_type_course_night">Fagkveld</string>
  <string name="search_type_itera_academy">Itera Academy</string>

  <string name="search_organizer_course_committe">Faggruppen</string>
  <string name="search_organizer_itera_academy">Itera Academy</string>

  <string name="search_department_technology">Teknologi</string>
  <string name="search_department_communication">Kommunikasjon</string>
  <string name="search_department_test">Testledelse</string>
  <string name="search_department_project_management">Prosjektledelse</string>
  <string name="search_department_consulting">Rådgivning</string>

</resources>
